Bug 486410 - "Subtitles" dropdown does not list a dragged-and-dropped .srt file
Summary: "Subtitles" dropdown does not list a dragged-and-dropped .srt file
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 1.1.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-01 16:15 UTC by Patrick Silva
Modified: 2025-02-25 23:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2024-05-01 16:15:32 UTC
STEPS TO REPRODUCE
1. open a video with Haruna
2. while the video plays, drag a .srt subtitles file (not tested other subtitles formats) from Dolphin and drop it on Haruna
3. click on "Subtitles" on top

OBSERVED RESULT
"Subtitles" dropdown does not list the .srt subtitles file dragged-and-dropped in the step 2

EXPECTED RESULT
"Subtitles" dropdown should list a dragged-and-dropped .srt file

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Graphics Platform: Wayland
Comment 1 george fb 2024-05-01 16:46:41 UTC
Git commit b8a31ca6b02f198d7b4f9774d4731e65b5c3d99d by George Florea Bănuș.
Committed on 01/05/2024 at 16:45.
Pushed by georgefb into branch 'master'.

mpvitem: update tracks models when tracks count changes

M  +5    -0    src/mpv/mpvitem.cpp
M  +3    -0    src/mpv/mpvproperties.h

https://invent.kde.org/multimedia/haruna/-/commit/b8a31ca6b02f198d7b4f9774d4731e65b5c3d99d
Comment 2 Patrick Silva 2025-02-25 20:38:30 UTC
Can reproduce again with Haruna 1.3.3.

Operating System: Arch Linux 
KDE Plasma Version: 6.3.1
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Graphics Platform: Wayland
Comment 3 george fb 2025-02-25 23:38:57 UTC
Git commit 4df17ebd97658bba7a79c6f62ebfe753915db409 by George Florea Bănuș.
Committed on 25/02/2025 at 23:34.
Pushed by georgefb into branch 'master'.

MpvVideo: when dropping a subtitle use an async command
          and call loadTracks in onAsyncReply

M  +3    -0    src/mpv/mpvitem.cpp
M  +1    -0    src/mpv/mpvitem.h
M  +1    -1    src/qml/MpvVideo.qml

https://invent.kde.org/multimedia/haruna/-/commit/4df17ebd97658bba7a79c6f62ebfe753915db409