mpvitem: update tracks models when tracks count changes

BUG: 486410